--- a/Master's research/Code1(データ準備).ipynb
+++ b/Master's research/Code1(データ準備).ipynb
@@ -76,21 +76,21 @@
    "source": [
     "#データの読み込み\n",
     "#2017-2022のデータの読み込み\n",
-    "data_0_1 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2017-2022.xlsx', header=None, index_col=None)\n",
+    "data_0_1 = pd.read_excel('./2017-2022.xlsx', header=None, index_col=None)\n",
     "#2011-2016のデータの読み込み\n",
-    "data_0_2 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2011-2016.xlsx', header=None, index_col=None)\n",
+    "data_0_2 = pd.read_excel('./2011-2016.xlsx', header=None, index_col=None)\n",
     "#2005-2010のデータの読み込み\n",
-    "data_0_3 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2005-2010.xlsx', header=None, index_col=None)\n",
+    "data_0_3 = pd.read_excel('./2005-2010.xlsx', header=None, index_col=None)\n",
     "#1999-2004のデータの読み込み\n",
-    "data_0_4 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1999-2004.xlsx', header=None, index_col=None)\n",
+    "data_0_4 = pd.read_excel('./1999-2004.xlsx', header=None, index_col=None)\n",
     "#1993-1998のデータの読み込み\n",
-    "data_0_5 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1993-1998.xlsx', header=None, index_col=None)\n",
+    "data_0_5 = pd.read_excel('./1993-1998.xlsx', header=None, index_col=None)\n",
     "#1992のデータの読み込み\n",
-    "data_0_6 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1992.xlsx', header=None, index_col=None)\n",
+    "data_0_6 = pd.read_excel('./1992.xlsx', header=None, index_col=None)\n",
     "#1987-1992のデータの読み込み\n",
-    "#data_0_6 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1987-1992.xlsx', header=None, index_col=None)\n",
+    "#data_0_6 = pd.read_excel('./1987-1992.xlsx', header=None, index_col=None)\n",
     "#1983-1986のデータの読み込み\n",
-    "#data_0_7 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1983-1986.xlsx', header=None, index_col=None)"
+    "#data_0_7 = pd.read_excel('./1983-1986.xlsx', header=None, index_col=None)"
    ]
   },
   {
