--- a/Master's research/Code1(データ準備).ipynb
+++ b/Master's research/Code1(データ準備).ipynb
@@ -243,19 +243,19 @@
    "source": [
     "#データの読み込み\n",
     "#2017-2022の追加財務データの読み込み\n",
-    "zaimudata_0_1 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2017-2022(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_1 = pd.read_excel('./2017-2022(財務).xlsx', header=None, index_col=None)\n",
     "#2011-2016の追加財務データの読み込み\n",
-    "zaimudata_0_2 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2011-2016(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_2 = pd.read_excel('./2011-2016(財務).xlsx', header=None, index_col=None)\n",
     "#2005-2010の追加財務データの読み込み\n",
-    "zaimudata_0_3 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/2005-2010(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_3 = pd.read_excel('./2005-2010(財務).xlsx', header=None, index_col=None)\n",
     "#1999-2004の追加財務データの読み込み\n",
-    "zaimudata_0_4 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1999-2004(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_4 = pd.read_excel('./1999-2004(財務).xlsx', header=None, index_col=None)\n",
     "#1993-1998の追加財務データの読み込み\n",
-    "zaimudata_0_5 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1993-1998(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_5 = pd.read_excel('./1993-1998(財務).xlsx', header=None, index_col=None)\n",
     "#1992の追加財務データの読み込み\n",
-    "zaimudata_0_6 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1992(財務).xlsx', header=None, index_col=None)\n",
+    "zaimudata_0_6 = pd.read_excel('./1992(財務).xlsx', header=None, index_col=None)\n",
     "#1992-2022の時価総額等データ\n",
-    "jikasougakudata_0_1 = pd.read_excel('/Users/nagashimahikaru/Documents/修士論文/使用データ/1992-2022(時価総額等).xlsx', header=None, index_col=None)"
+    "jikasougakudata_0_1 = pd.read_excel('./1992-2022(時価総額等).xlsx', header=None, index_col=None)"
    ]
   },
   {
