--- a/Master's research/Code2(データ準備2).ipynb
+++ b/Master's research/Code2(データ準備2).ipynb
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "pickle_in = open(\"./organized_data.pickle\",\"rb\") #/Users/nagashimahikaru/document\n",
+    "pickle_in = open(\"./organized_data.pickle\",\"rb\"),
     "data_2 = pickle.load(pickle_in)\n",
     "pickle_in.close()\n",
     "display(data_2)"
@@ -627,7 +627,7 @@
    ],
    "source": [
     "#コールレートデータの読み込み\n",
-    "callrate_data = pd.read_csv('/Users/nagashimahikaru/Documents/修士論文/使用データ/callrate.csv', encoding=\"shift-jis\")\n",
+    "callrate_data = pd.read_csv('./callrate.csv', encoding=\"shift-jis\")\n",
     "display(callrate_data) #1985/7〜2022/6のコールレートデータ"
    ]
   },
